Change font to Serif

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -9,8 +9,8 @@
 }
 
 :root [data-theme='vintage'] {
-	--theme-font-family-heading: 'PressStart2P';
-	--theme-font-family-base: 'PressStart2P';
+	--theme-font-family-heading: 'Serif';
+	--theme-font-family-base: 'Serif';
 }
 html,
 body {
